Footer is no longer stick at the bottom (too much radios now so it was hidden)

--- a/web/less/components/schedule-grid.less
+++ b/web/less/components/schedule-grid.less
@@ -3,7 +3,7 @@
 .schedule-radio-grid {
   margin-top: 40px;
   margin-left: @margin-from-radio-list;
-  padding-bottom: 25px;
+  //padding-bottom: 25px;
 
   position: relative;
   //overflow: hidden;
