--- a/web/less/main.less
+++ b/web/less/main.less
@@ -18,11 +18,11 @@ body {
   }
 
   .footer {
-    position: absolute;
-    bottom: 0;
+    //position: absolute;
+    //bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 40px;
+    //height: 40px;
 
     font-size: 12px;
     small {
